[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = "Richard M. Köhler" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
description = "An open-source software package for neural decoding."
dynamic = ["version"]
keywords = ["machine learning", "bci", "eeg", "ieeg", "neurophysiology"]
license = { file = "LICENSE" }
maintainers = [{ name = "Richard M. Köhler" }]
name = "pte-decode"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

dependencies = [
  "bayesian-optimization",
  "catboost",
  "imbalanced-learn",
  "joblib",
  "matplotlib",
  "mne>=1.0",
  "mne-bids",
  "numba",
  "numpy",
  "pandas",
  "pip",
  "pte",
  "pte-stats>=0.3",
  "scikit-learn",
  "scipy",
  "seaborn",
  "statannotations",
  "xgboost",
  "py-neuromodulation @ git+https://github.com/richardkoehler/py_neuromodulation.git@563ee46d66937ac25ddcb9e6d6350bfa5fbb397d",
]

[project.optional-dependencies]
dev = [
  "black",
  "hatch",
  "mypy",
  "packaging",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  "tox",
]

[tool.black]
line-length = 79

[tool.hatch]
version.path = "src/pte_decode/__init__.py"
metadata.allow-direct-references = true

[[tool.mypy.overrides]]
module = [
  "bayes_opt",
  "catboost",
  "imblearn.*",
  "joblib",
  "matplotlib",
  "matplotlib.*",
  "mne",
  "mne_bids",
  "mne_bids.*",
  "mpl_toolkits.axes_grid1",
  "numba",
  "numpy",
  "pandas",
  "plotly",
  "pte",
  "pte_stats",
  "py_neuromodulation",
  "scipy",
  "scipy.*",
  "seaborn",
  "skimage",
  "sklearn.*",
  "statannotations",
  "statannotations.*",
  "statsmodels.stats.multitest",
  "xgboost",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
