[metadata]
name = pte_decode
version = 0.1.0

[options]
packages = pte_decode
python_requires = '>=3.9'
install_requires =
    requests
    bayesian-optimization
    catboost
    imbalanced-learn
    joblib
    matplotlib
    mne
    mne-bids
    numba
    numpy
    pandas
    pip
    scikit-learn
    scipy
    statannotations
    xgboost